--- a/HW 20.03.2023/src/styles/normalize.css
+++ b/HW 20.03.2023/src/styles/normalize.css
@@ -407,3 +407,12 @@ template {
 [hidden] {
   display: none;
 }
+
+
+/* Размеры с учётами пэддингов:
+box-sizing: border-box; */
+
+p {
+  margin: 0;
+  padding: 0;
+}
