--- a/HW 20.03.2023/src/styles/header.css
+++ b/HW 20.03.2023/src/styles/header.css
@@ -5,12 +5,23 @@
   justify-content: space-between;
 }
 
-.header-logo {
-  width: 16.2rem;
-  height: 3.9rem;
-}
-
 .header-btn {
   background: transparent;
   border: .1rem solid var(--black);
+}
+
+.header-btn:hover {
+  background-color: var(--yellow-pale);
+  border-color: var(--yellow-pale);
+}
+
+.header-btn:active {
+  border-color: var(--yellow);
+  background-color: var(--white);
+}
+
+.header-btn:disabled {
+  border-color: var(--light-grey);
+  background-color: var(--white);
+  color: var(--light-grey);
 }
