--- a/HW 20.03.2023/src/styles/main.css
+++ b/HW 20.03.2023/src/styles/main.css
@@ -2,6 +2,7 @@
 @import './variables.css';
 @import './header.css';
 @import './sections.css';
+@import './footer.css';
 
 html {
   font-size: calc(100vw / 1440 * 10);
@@ -15,13 +16,7 @@ html {
 
 @media screen and (max-width: 768px) {
   html {
-    font-size: calc (100vw / 500 * 10);
-  }
-}
-
-@media screen and (max-width: 500px) {
-  html {
-    font-size: calc (100vw / 360 * 10);
+    font-size: calc (100vw / 320 * 10);
   }
 }
 
@@ -41,7 +36,22 @@ html {
     url('C:\Users\Ilya\Desktop\New folder\hw\HW 20.03.2023\public\accets\fonts\Inter\Inter-VariableFont_slnt,wght.ttf') format('truetype');
 }
 
-body {
+body {}
+
+button {
+  padding: 1.8rem 4rem;
+  font-size: 1.6rem;
+  line-height: 1.9rem;
+  text-transform: uppercase;
+  border-radius: 2.4rem;
+  cursor: pointer;
+}
+
+.logo {
+  height: 3.9rem;
+}
+
+.container {
   max-width: 119rem;
   margin: 0 auto;
   font-family: 'Inter', sans-serif;
@@ -50,11 +60,20 @@ body {
   background-color: var(--white);
 }
 
-button {
-  padding: 1.8rem 4rem;
-  font-size: 1.6rem;
-  line-height: 19px;
-  text-transform: uppercase;
-  border-radius: 24px;
-  cursor: pointer;
+@media all and (max-width: 1025px) {
+  .container {
+    max-width: 89rem;
+  }
+}
+
+@media all and (max-width: 769px) {
+  .container {
+    max-width: 63rem;
+  }
+}
+
+@media all and (max-width: 321px) {
+  .container {
+    max-width: 32rem;
+  }
 }
