--- a/HW 20.03.2023/src/styles/sections.css
+++ b/HW 20.03.2023/src/styles/sections.css
@@ -12,6 +12,21 @@
   border: none;
 }
 
+.sections__btn:hover {
+  background-color: var(--yellow-pale);
+}
+
+.sections__btn:active {
+  background-color: var(--yellow);
+  border: .1rem solid var(--black);
+  padding: 1.7rem 3.9rem;
+}
+
+.sections__btn:disabled {
+  background-color: var(--medium-gray);
+  color: var(--gray);
+}
+
 
 /* Sections */
 
@@ -115,7 +130,7 @@
 }
 
 .sections-3-left p {
-  padding-top: 3.2rem;
+  padding: 3.2rem 0 1.6rem 0;
 }
 
 
@@ -125,16 +140,27 @@
   flex-direction: column;
 }
 
-.inputs-height input,
-.inputs-width input {
+.input__number {
   background: var(--white);
-  border: 1px solid var(--light-gray);
+  border: .1rem solid var(--light-gray);
   border-radius: 1.2rem;
   width: 24rem;
   height: 5.4rem;
   font-size: 1.6rem;
   line-height: 2.4rem;
 }
+
+.input__number:hover {
+  border-color: rgba(0, 0, 0, 0);
+  outline: 0.1rem solid var(--yellow);
+}
+
+.input__number:focus {
+  border-color: rgba(0, 0, 0, 0);
+  outline: .1rem solid var(--yellow);
+}
+
+.input__number:disabled {}
 
 .inputs-radio {
   display: flex;
@@ -199,7 +225,7 @@
   justify-content: space-between;
   gap: 1.6rem;
   background-color: var(--white);
-  width: 25.5rem;
+  min-width: 25.5rem;
   padding: 2.4rem;
   border-radius: .8rem;
   position: absolute;
@@ -226,4 +252,51 @@
   font-size: 1.6rem;
   line-height: 2.4rem;
   margin: 0;
+}
+
+main {
+  border-bottom: .2rem solid var(--white-gray);
+  padding-bottom: 8rem;
+}
+
+@media all and (max-width: 1025px) {
+  .sections {
+    width: 89rem;
+  }
+
+  .sections h3 {
+    font-size: 3.4rem;
+    line-height: 4.4rem;
+    text-transform: uppercase;
+    padding-right: 3rem;
+    margin-bottom: 2.4rem;
+  }
+
+  /* SECTION 1 */
+
+  .sections-1 span {
+    margin-right: 18rem;
+  }
+
+  .sections-1 p {
+    margin-bottom: 9.8rem;
+  }
+
+  .sections-1-left,
+  .sections-3-left {
+    width: 38rem;
+    height: 33.6rem;
+    padding: 3rem;
+  }
+
+  .sections-1-right {
+    width: 44rem;
+    height: 39.6rem;
+  }
+
+  .swiper-slide img {
+    object-fit: cover;
+    width: 44rem;
+    height: 39.6rem;
+  }
 }
